--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 
     <div class="profile-pto">
-      <img src="./img/profile photo.png" alt="main photo">
+      <img src="./img/Yusuf Shaikh.jpg" alt="main photo">
     </div>
 
     <div class="name-plt">
@@ -71,7 +71,7 @@
   </div>
 
 
-  <div class="container main-section">
+  <div class="main-section">
 
     <div class="main-about">
       <div class="about-heading">
@@ -85,7 +85,7 @@
 
       <div class="row-01">
         <div class="col-01">
-          <img src="./img/profile photo.png">
+          <img src="./img/Yusuf Shaikh.jpg" width="100%">
         </div>
         <div class="col-01">
           <h3>Front-End Developer & Back-End Developer.</h3>
@@ -129,8 +129,7 @@
 
 
   <div class="main-skill-section">
-    <div class="container">
-      <div class="main-skill">
+      <div class="main-skill-container" style="width: 80%; margin: auto;">
         <div class="heading-skill">
           <h3>Skills</h3>
           <hr>
@@ -180,11 +179,10 @@
         </div>
 
       </div>
-    </div>
   </div>
 
   <div class="main-resume-section">
-    <div class="container">
+    <div class="main-resume-container">
       <div class="main-resume">
         <div class="heading-resume">
           <h3>Resume</h3>
@@ -272,7 +270,7 @@
 
 
     <div class="main-service">
-      <div class="container px-4 py-5 main-section-service" id="icon-grid">
+      <div class="main-services-container px-4 py-5 main-section-service" id="icon-grid">
         <h3 class="pb-2">Services</h3>
         <hr>
         <p style="margin-bottom: 40px;">Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga
@@ -285,7 +283,7 @@
           <div class="col-lg-4 col-md-6 icon-box aos-init aos-animate">
             <div>
               <div class="icon-rows-boxs">
-                <div class="icon-col-boxs"><i class="bi bi-briefcase-fill"></i></div>
+                <div class="icon-col-boxs-1"><i class="bi bi-briefcase-fill"></i></div>
                 <div class="icon-col-boxs" style=" margin-left: 10px;">
                   <h4>Lorem Ipsum</h4>
                   <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati
@@ -298,7 +296,7 @@
           <div class="col-lg-4 col-md-6 icon-box aos-init aos-animate">
             <div>
               <div class="icon-rows-boxs">
-                <div class="icon-col-boxs"><i class="bi bi-card-checklist"></i></div>
+                <div class="icon-col-boxs-1"><i class="bi bi-card-checklist"></i></div>
                 <div class="icon-col-boxs" style=" margin-left: 10px;">
                   <h4>Dolor Sitema</h4>
                   <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
@@ -310,7 +308,7 @@
           <div class="col-lg-4 col-md-6 icon-box aos-init aos-animate">
             <div>
               <div class="icon-rows-boxs">
-                <div class="icon-col-boxs"><i class="bi bi-bar-chart"></i></div>
+                <div class="icon-col-boxs-1"><i class="bi bi-bar-chart"></i></div>
                 <div class="icon-col-boxs" style=" margin-left: 10px;">
                   <h4>Sed ut perspiciatis</h4>
                   <p>Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
@@ -328,7 +326,7 @@
           <div class="col-lg-4 col-md-6 icon-box aos-init aos-animate">
             <div>
               <div class="icon-rows-boxs">
-                <div class="icon-col-boxs"><i class="bi bi-award"></i></div>
+                <div class="icon-col-boxs-1"><i class="bi bi-award"></i></div>
                 <div class="icon-col-boxs" style=" margin-left: 10px;">
                   <h4>Magni Dolores</h4>
                   <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
@@ -340,7 +338,7 @@
           <div class="col-lg-4 col-md-6 icon-box aos-init aos-animate">
             <div>
               <div class="icon-rows-boxs">
-                <div class="icon-col-boxs"><i class="bi bi-check-circle-fill"></i></div>
+                <div class="icon-col-boxs-1"><i class="bi bi-check-circle-fill"></i></div>
                 <div class="icon-col-boxs" style=" margin-left: 10px;">
                   <h4>Nemo Enim</h4>
                   <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
@@ -352,7 +350,7 @@
           <div class="col-lg-4 col-md-6 icon-box aos-init aos-animate">
             <div>
               <div class="icon-rows-boxs">
-                <div class="icon-col-boxs"><i class="bi bi-calendar-check"></i></div>
+                <div class="icon-col-boxs-1"><i class="bi bi-calendar-check"></i></div>
                 <div class="icon-col-boxs" style=" margin-left: 10px;">
                   <h4>Eiusmod Tempor</h4>
                   <p>Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
