--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-  <title>Single Page Personal Portfolio </title>
+  <title>Personal Portfolio</title>
 </head>
 
 <body>
